# pdfmill

./: CLAUDE.md  LICENSE  README.md  TODO.md  babel.cfg  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml  python-package.yml
configs/: label_packing.yaml  lecture_a.yaml  multi_printer.yaml  six_page.yaml
docs/: cli-reference.md  configuration.md  getting-started.md  input.md  output-profiles.md  page-selection.md  printing.md  transforms.md  tutorial_shipping_label.md  watch-mode.md
locales/en/LC_MESSAGES/: messages.po
locales/zh/LC_MESSAGES/: messages.po
src/pdfmill/: __init__.py  cli.py  config.py  constants.py  exceptions.py  gui.py  logging_config.py  printer.py  processor.py  selector.py  transforms.py  validation.py  watcher.py
src/pdfmill/gui/: __init__.py  app.py  constants.py  dialogs.py  dpi.py  frames.py  i18n.py
src/pdfmill/pipeline/: __init__.py  printing.py  safety.py  transforms.py
src/pdfmill/printing/: __init__.py  base.py  factory.py  mock.py  sumatra.py
src/pdfmill/transforms/: __init__.py  _utils.py  base.py  combine.py  core.py  crop.py  handlers.py  registry.py  render.py  resize.py  rotate.py  split.py  stamp.py
src/pdfpipe/: cli.py  config.py  printer.py  processor.py  transforms.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py  test_pipeline.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_printer.py  test_processor.py  test_safety.py  test_selector.py  test_transforms.py  test_validation.py  test_watcher.py
